# Techfest-Team-41

./: .gitignore  README.md  main.py  pyproject.toml
backend/: README.md  pyproject.toml
backend/api_routers/: webscrape.py
backend/app/: config.py  main.py  tele_bot.py
backend/app/api_routers/: webscrape.py
backend/app/rag/: crawl.py  image.py  rag_controller.py  rag_routes.py  tes.py
backend/app/whatsapp/: whatsapp.py
backend/news_summarizer/: article.py  article_scraper.py
backend/news_twitter_sentiment/: article_scraper.py  main.py
backend/oppose_finder/: oppose.py
backend/techfest/: main.py
backend/techfest/agent_rag/: agent.py
backend/techfest/agent_rag/tools/: rag.py
backend/techfest/models/: assistant.py  team.py
backend/tele_bot/: ai_agent.py  backend.py  frontend.py  tele_bot.py
backend/webscrape/results/: price_results.csv
frontend/techfest/: package-lock.json  package.json
frontend/techfest/src/app/: layout.js  like-button.js  page.js
