[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "fastapi[standard]>=0.115.8",
    "langchain-community>=0.3.19",
    "langchain[openai]>=0.3.20",
    "langgraph[graph]>=0.3.5",
]
